# rust-machine-learning-engineering

./: README.md
docker_scikit_learn_onnx/: .gitignore  Cargo.toml  Dockerfile
docker_scikit_learn_onnx/src/: main.rs
docker_scikit_learn_onnx/toy_model_generation/: rf_model.onnx
k8s_docker_scikit_learn_onnx/: .gitignore  Cargo.toml  README.md  hpa.yaml  inference-server-deployment.yaml  inference-server-service.yaml  ml-api-tests.py
k8s_docker_scikit_learn_onnx/payload_test/: payload.json
k8s_docker_scikit_learn_onnx/src/: main.rs
k8s_docker_scikit_learn_onnx/toy_model_generation/: scikit_learn_toy_model.ipynb
