[package]
name = "docker_scikit_learn_onnx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
ndarray = "0.16.1"
ort = "=2.0.0-rc.9"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
tokio = {version = "1.42.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
